Web Inspector: JavaScript breakpoint on a line with just a semicolon doesn't get triggered https://bugs.webkit.org/show_bug.cgi?id=272916 <rdar://problem/126707973>

Reviewed by Keith Miller.

Don't add a pause location for empty statements as there's nothing to execute.

* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseStatement):

* LayoutTests/inspector/debugger/breakpoint-empty-statement.html: Added.
* LayoutTests/inspector/debugger/breakpoint-empty-statement-expected.txt: Added.
* LayoutTests/inspector/debugger/resources/empty-statement.js: Added.

Canonical link: https://commits.webkit.org/316519@main